--- a/views/layout/SignLayout.pug
+++ b/views/layout/SignLayout.pug
@@ -29,7 +29,7 @@ head
                 .text-center
                   a.small(href='forgot-password.html') Forgot Password?
                 .text-center
-                  a.small(href='register.html') Create an Account!
+                  a.small(href='/admin/register') Create an Account!
 // Bootstrap core JavaScript
 script(src='/vendor/jquery/jquery.min.js')
 script(src='/vendor/bootstrap/js/bootstrap.bundle.min.js')
